Se arreglo paging redundante en brands y se arreglo tabla de relacion articles categories
aparte de estos e movio toda instancia de constante a constants